<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    >

    <TextView
        android:id="@+id/tv_adv_search_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_search_options"
        android:textSize="20sp"
        android:textStyle="bold" />

	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" 
	    >
	    
	    <TextView
	        android:id="@+id/tv_img_size"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginRight="30sp"	        
	        android:text="@string/text_image_size" />
	
	    <Spinner
	        android:id="@+id/spn_image_size"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:entries="@array/image_size_options"
	        />
	    	    
	</LinearLayout>

	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" 
	    >
	    
	    <TextView
	        android:id="@+id/tv_color_filter"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginRight="30sp"
	        android:text="@string/text_image_size" />
	
	    <Spinner
	        android:id="@+id/spn_color_filter"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:entries="@array/image_color_options"
	        />
	    	    
	</LinearLayout>
	
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" 
	    >
	    
	    <TextView
	        android:id="@+id/tv_img_type"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginRight="30sp"	        
	        android:text="@string/text_image_type" />
	
	    <Spinner
	        android:id="@+id/spn_image_type"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"	        
	        android:entries="@array/image_type_options"
	        />
	    	    
	</LinearLayout>
	
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" 
	    >
	    
	    <TextView
	        android:id="@+id/tv_site_filter"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginRight="30sp"	        
	        android:text="@string/text_site_filter" />
	
	    <EditText
	        android:id="@+id/etSiteFilter"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:hint="@string/edit_text_site_filter_hint"
	        android:ems="10" >
	    </EditText>
	    	    
	</LinearLayout>
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" 
	    >
	    
    <Button
        android:id="@+id/btnSaveSearchOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="saveAdvancedSearchOptions"
        android:text="@string/button_save" />
	    	    
	    	    
	</LinearLayout>
						
	
</LinearLayout>
